--- a/movies/package.json
+++ b/movies/package.json
@@ -16,15 +16,18 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.9",
-    "typescript": "^4.2.4"
+    "mongoose": "^5.12.9"
   },
   "devDependencies": {
     "@types/config": "0.0.38",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^15.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
+    "eslint": "^7.26.0",
     "nodemon": "^2.0.7",
+    "prettier": "^2.3.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
