--- a/movies/package.json
+++ b/movies/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node dist/app.js",
     "dev": "nodemon --config nodemon.json src/app.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "test": "mocha -r tsconfig-paths/register -r ts-node/register \"src/test/**/*.test.ts\""
   },
   "keywords": [],
   "author": "",
@@ -19,16 +20,25 @@
     "mongoose": "^5.12.9"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.18",
+    "@types/chai-http": "^4.2.0",
     "@types/config": "0.0.38",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
-    "@types/node": "^15.3.0",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.3.1",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "eslint": "^7.26.0",
+    "mocha": "^8.4.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
+    "supertest": "^6.1.3",
     "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.4"
   }
 }
