--- a/movies/package.json
+++ b/movies/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "config": "^3.3.6",
     "dotenv": "^9.0.2",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.9"
@@ -27,6 +28,8 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.3.1",
+    "@types/request": "^2.48.5",
+    "@types/sinon": "^10.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
@@ -36,6 +39,8 @@
     "mocha": "^8.4.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
+    "request": "^2.88.2",
+    "sinon": "^10.0.0",
     "supertest": "^6.1.3",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
